--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>O Engenheiro Brasileiro, Peter Cardoso, conhecido por viver de Loteria, acaba de ganhar carta branca na Justiça Israelense para promover, no Brasil, o seu polêmico Aplicativo que usa <span style="color:#A6130A;font-weight: 700">Inteligência Artificial</span> para Garantir um <span style="color:#A6130A;font-weight: 700">Salário Semanal na LotoFácil.</span>
         </p>
 
-        <center><img src="Peter.jpg" class="img-fluid" style="max-height: 500px;margin-top: 10px;margin-bottom: 20px"><p class="content-media-description" style="font-size: 0.8em">  Peter Cardoso — Foto: Jonas Vieira/Arquivo Pessoal </p></img></center>
+        <center><img src="peter.jpg" class="img-fluid" style="max-height: 500px;margin-top: 10px;margin-bottom: 20px"><p class="content-media-description" style="font-size: 0.8em">  Peter Cardoso — Foto: Jonas Vieira/Arquivo Pessoal </p></img></center>
 
         <p>
           Peter Cardoso virou um dos assuntos mais comentados no Twitter nesta semana após ganhar na justiça o direito de comercializar o seu aplicativo em território brasileiro.
